--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
 {% block styles %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/dark.css">
 <style>
     .admin-card {
         background-color: #1e1e1e;
@@ -563,7 +561,7 @@
 
         <div class="table-responsive">
             <table class="table table-dark table-hover align-middle" style="table-layout: fixed; width: 100%;">
-                <thead class="table-danger text-dark">
+                <thead>
                     <tr>
                         <th style="width:18%;">Date & Time</th>
                         <th style="width:15%;">Receipt #</th>
