# Quick fix for Audit table in users.html
- Uniform table rendering and display for different devices for audit tab table

--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -119,7 +119,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 110px;
+    min-width: 90px;
     height: 36px;
     font-weight: 600;
     font-size: 0.8rem;
@@ -727,12 +727,12 @@
                 <thead>
                     <tr class="border-bottom border-secondary">
                         <th style="width: 13%;">Date & Time</th>
-                        <th style="width: 22%;">Item Summary</th>
-                        <th style="width: 8%; text-align:center;">Movement</th>
-                        <th style="width: 12%;">Reason</th>
+                        <th style="width: 20%;">Item Summary</th>
+                        <th style="width: 10%; text-align:center;">Movement</th>  <!-- was 8% -->
+                        <th style="width: 11%;">Reason</th>                       <!-- was 12% -->
                         <th style="width: 5%; text-align:center;">Qty</th>
                         <th style="width: 13%;">Reference</th>
-                        <th style="width: 18%;">Notes</th>
+                        <th style="width: 19%;">Notes</th>                        <!-- was 18% -->
                         <th style="width: 9%;">Staff</th>
                     </tr>
                 </thead>
