--- a/templates/transactions/utang.html
+++ b/templates/transactions/utang.html
@@ -184,7 +184,7 @@
 {% block content %}
 
 <div class="page-title">
-    <i class="bi bi-hourglass-split"></i> Utang Tracker
+    <i class="bi bi-hourglass-split"></i> Receivables Tracker
 </div>
 
 <!-- SUMMARY ROW -->
@@ -201,7 +201,7 @@
     </div>
     <div class="col-md-4">
         <div class="summary-card">
-            <div class="label">Open Debts</div>
+            <div class="label">Total No. of Receivables</div>
             <div class="value warning">{{ total_debts }}</div>
         </div>
     </div>
