--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -1529,9 +1529,9 @@ function toggleDebtRow(collapseId, saleId, parentRow) {
                     <thead style="font-size:0.75rem;">
                         <tr class="text-muted">
                             <th width="3%"></th>
-                            <th>Paid At</th>
+                            <th>Date Paid</th>
                             <th>Amount</th>
-                            <th colspan="3">Method & Reference</th>
+                            <th colspan="3">Payment Method</th>
                             <th>Staff</th>
                             <th>Notes</th>
                         </tr>
